#30 - solved the alignment issue while using "text-align: center" css style.

--- a/src/roundslider.css
+++ b/src/roundslider.css
@@ -102,6 +102,7 @@ div.rs-block { -webkit-border-radius: 100%; border-radius: 100%; }
 }
 .rs-bar
 {
+    display: block;
     position: absolute;
     height: 0;
     z-index: 10;
